# bound

./: Cargo.toml  README.md  run.sh
apps/: Cargo.toml  build.rs
apps/src/: main.rs
guess-number-game/: Cargo.toml  build.rs  example.env
guess-number-game/apps/: Cargo.toml
guess-number-game/apps/src/: main.rs
guess-number-game/guests/random-number/: Cargo.toml
guess-number-game/guests/random-number/src/: main.rs
guests/game-result/: Cargo.toml
guests/game-result/src/: main.rs
guests/random-number/: Cargo.toml
guests/random-number/src/: main.rs
static/: index.html
