[workspace]
members = [
    "apps",
    "guests/game-result"
]
resolver = "2"

[workspace.dependencies]
alloy = { version = "0.8", features = [
    "sol-types",
    "node-bindings",
    "rpc-types-eth",
    "provider-anvil-node",
    "contract",
    "signer-local",
    "providers",
    "provider-reqwest-http"
] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
risc0-zkvm = { version = "2.2" }
risc0-build = { version = "2.2" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
warp = "0.3"
serde_json = "1.0" 