[package]
name = "guess-number-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.1" }

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
boundless-market = { workspace = true }
clap = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
warp = "0.3"
serde_json = "1.0" 